added white letters to Name on portfolio and contact

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <body>
     <!-- added NavBar script from bootstrap -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Edward McGee</a>
+    <a id="link" class="navbar-brand" href="index.html">Edward McGee</a>
 
 
       <!-- added bootstrap  With a toggler on the left and brand name on the right: -->
