updated porfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,15 @@
   <!-- OW=orginal work -->
 
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/portfolio-table.css">
+
+
+  <!-- Libraries CSS Files -->
+  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -91,7 +100,6 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
-
       <div class="work">
         <img src="assets/images/darksoul.png" alt="Word Guess">
 
@@ -117,16 +125,186 @@
 
         <h3>Rock Paper Scissors</h3>
       </div>
-
     </section>
-
   </div>
+
+
+
+
+<!--==========================
+      Portfolio Section
+    ============================-->
+    <section id="portfolio"  class="section-bg" >
+        <div class="container">
+  
+          <header class="section-header">
+            <h3 class="section-title">Our Portfolio</h3>
+          </header>
+  
+          <!-- <div class="row">
+            <div class="col-lg-12">
+              <ul id="portfolio-flters">
+                <li data-filter="*" class="filter-active">All</li>
+                <li data-filter=".filter-app">App</li>
+                <li data-filter=".filter-card">Card</li>
+                <li data-filter=".filter-web">Web</li>
+              </ul>
+            </div>
+          </div> -->
+  
+          <div class="row portfolio-container">
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <!-- First Icon -->
+                  <a href="https://13edmc07.github.io/unit-4-game/" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview">
+                    <i class="ion ion-eye"></i></a>
+                  <!-- Second Icon -->
+                  <a href="https://13edmc07.github.io/unit-4-game/" class="link-details" title="More Details">
+                    <i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">App 1</a></h4>
+                  <p>App</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Web 3</a></h4>
+                  <p>Web</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">App 2</a></h4>
+                  <p>App</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Card 2</a></h4>
+                  <p>Card</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Web 2</a></h4>
+                  <p>Web</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">App 3</a></h4>
+                  <p>App</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Card 1</a></h4>
+                  <p>Card</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp" data-wow-delay="0.1s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Card 3</a></h4>
+                  <p>Card</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
+              <div class="portfolio-wrap">
+                <figure>
+                  <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
+                  <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Web 1</a></h4>
+                  <p>Web</p>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- #portfolio -->
+
+
 
   <footer>
 
     <div class="container">
     </div>
   </footer>
+  <script src="assets/scripts/portfolio-table.js"></script>
 </body>
-
 </html>
