added projects to porfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
     </div>
   </header> -->
 
-  <div id="main-container" class="container">
+  <!-- <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
       <div class="work">
@@ -126,7 +126,7 @@
         <h3>Rock Paper Scissors</h3>
       </div>
     </section>
-  </div>
+  </div> -->
 
 
 
@@ -167,8 +167,54 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">App 1</a></h4>
-                  <p>App</p>
+                  <h4><a href="#">Unit 4 Game </a></h4>
+                  <p>Unit 4 Game</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
+                <div class="portfolio-wrap">
+                <figure>
+                  <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <a href="https://github.com/13EdMc07/Word-Guess-Game" class="link-preview" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview">
+                    <i class="ion ion-eye"></i></a>
+                  <a hrefhttps:"https://github.com/13EdMc07/Word-Guess-Game" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Word-Guess-Game</a></h4>
+                  <p>Word-Guess-Game</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
+                <div class="portfolio-wrap">
+                <figure>
+                    <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <a href=" https://13edmc07.github.io/Giphy-HW/" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a hrefhttps:" https://13edmc07.github.io/Giphy-HW/  class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">Giphy-HW</a></h4>
+                  <p>Giphy-HW</p>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
+                <div class="portfolio-wrap">
+                <figure>
+                    <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <a href="https://13edmc07.github.io/RPS-Multiplayer/" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a hrefhttps:"https://13edmc07.github.io/RPS-Multiplayer/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                </figure>
+  
+                <div class="portfolio-info">
+                  <h4><a href="#">RPS-Multiplayer</a></h4>
+                  <p>RPS-Multiplayer</p>
                 </div>
               </div>
             </div>
@@ -176,14 +222,15 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  
+                  <a href="https://13edmc07.github.io/Trivagame/" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://13edmc07.github.io/Trivagame/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Web 3</a></h4>
-                  <p>Web</p>
+                  <h4><a href="#">Trivagame</a></h4>
+                  <p>Trivagame</p>
                 </div>
               </div>
             </div>
@@ -191,14 +238,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <a href="https://13edmc07.github.io/Train-Game/" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://13edmc07.github.io/Train-Game/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">App 2</a></h4>
-                  <p>App</p>
+                  <h4><a href="#">Train-Game</a></h4>
+                  <p>Train-Game</p>
                 </div>
               </div>
             </div>
@@ -206,59 +253,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <img src="assets/images/darksoul.png" class="img-fluid" alt="">
+                  <a href="https://13edmc07.github.io/Responsive-Portfolio/" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="https://13edmc07.github.io/Responsive-Portfolio/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Card 2</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Web 2</a></h4>
-                  <p>Web</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">App 3</a></h4>
-                  <p>App</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 1</a></h4>
-                  <p>Card</p>
+                  <h4><a href="#">Responsive-Portfolio</a></h4>
+                  <p>Responsive-Portfolio</p>
                 </div>
               </div>
             </div>
@@ -272,8 +274,8 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Card 3</a></h4>
-                  <p>Card</p>
+                  <h4><a href="#">?</a></h4>
+                  <p>?</p>
                 </div>
               </div>
             </div>
@@ -287,8 +289,8 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Web 1</a></h4>
-                  <p>Web</p>
+                  <h4><a href="#">?</a></h4>
+                  <p>?</p>
                 </div>
               </div>
             </div>
