--- a/portfolio.html
+++ b/portfolio.html
@@ -138,7 +138,7 @@
         <div class="container">
   
           <header class="section-header">
-            <h3 class="section-title">Our Portfolio</h3>
+            <h3 class="section-title">MY Portfolio</h3>
           </header>
   
           <!-- <div class="row">
